# IoT_GUIAPI

./: .gitmodules  .travis.yml  CMakeLists.txt  GUIAPI_Layout.h  GUIAPI_LayoutItem.h  GUIAPI_MAIN.h  GUIAPI_Widget.h  README.md  appveyor.yml  main.c  main.cpp  oguifw.h  roadmap.md  update_submodules.bat
Embedded_GUI_API/: CMakeLists.txt  Common.h  EmbedGUIAPI.c  EmbedGUIAPI.h  Embedded_GUI_API.cpp  Embedded_GUI_API.sln  Embedded_GUI_API.vcxproj  Embedded_GUI_API.vcxproj.filters  Layout.c  Layout.h  Widget.c  Widget.h  WidgetsList.c  WidgetsList.h
Testing/: CMakeLists.txt  appveyor.yml  array-test.cpp  array_testing.h  string-array-test.cpp  string-test.cpp  string_testing.h  test_runner.cpp
datatypes/: CMakeLists.txt  GUIAPI_Array.cpp  GUIAPI_Array.h  GUIAPI_String.cpp  GUIAPI_String.h  GUIAPI_Vector.h
datatypes/include/: GUIAPI_Vector.h
datatypes/src/: GUIAPI_String.cpp
layout_items/: CMakeLists.txt
layout_items/include/: GUIAPI_IT_Label.h  GUIAPI_IT_PushButton.h  GUIAPI_IT_RadioButton.h  GUIAPI_IT_Textbox.h
layout_items/src/: GUIAPI_IT_Label.cpp  GUIAPI_IT_PushButton.cpp  GUIAPI_IT_RadioButton.cpp  GUIAPI_IT_Textbox.cpp
libs/: List.cpp  List.h
screen_emulator/: CMakeLists.txt  GUIAPI_ScreenEmulator.cpp  GUIAPI_ScreenEmulator.h  OpenGl instalation guide.txt  SE_GFX.cpp  SE_GFX.h  SE_MAIN.cpp  SE_MAIN.h  SE_UTILS.h  ShaderLoader.cpp  ShaderLoader.h  character_codes.h  shaders.h
screen_emulator/glad/include/glad/: glad.h
screen_emulator/glad/src/: glad.c
screen_emulator/shaders/: fragment.glsl  vertex.glsl
tests/: CMakeLists.txt
